This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-12-05:

- Fixed an issue in the vi line editors where lines beginning with whitespace
  could not be recalled from the history (e.g. with arrow up). Bug introduced
  on 2022-10-31.

- Fixed an issue that caused .unset discipline functions (if set) to be
  incorrectly called during cleanup upon terminating a virtual subshell or
  before running a #!-less script.

2024-11-26:

- The -v/--verbose option of the cp, mv and ln built-in commands (which are
  bound to the /opt/ast/bin virtual path by default) was non-functional. The
  option now reports each successful operation in the manner of the *BSD and
  macOS versions of these commands.

2024-11-17:

- Fixed undefined behaviour when passing the floating point values Inf or
  NaN to the 'sleep' built-in command. These now cause 'sleep' to correctly
  sleep forever or print an error message, respectively.

2024-11-15:

- On Android 14 (Termux), the -a option to the 'exec' command is ineffective
  because the OS disallows changing $0 (which is argv[0] in C). ksh now
  detects this condition at compile time and, if detected, makes 'exec' print
  a warning if -a is used, instead of silently failing to set argument zero.

2024-11-14:

- Fixed a crash in option parsing upon encountering an option value to a
  long option that doesn't accept one (e.g., 'set --state=foo' crashed).
  Bug introduced on 2024-08-01.

2024-11-02:

- Fixed: assigning to TMOUT in a virtual subshell was rendering further
  assignments to TMOUT outside of that subshell ineffective.

- Fixed: the 'read' built-in was timing out according to the value of TMOUT
  even when it was not reading from a terminal. The 'read' command will now
  ignore $TMOUT when it is reading from a pipe, as was always documented.